- one click to switch visuals between material and footprint (d3 change size)

0.4.0 (2025-03-04 performance update)
- reduced the centroid data size by 97% to 841 KB.
- reduced the tile data size by 95% to 7,677 KB.
- reduced the shoreline data size by 79% to 2,358 KB.
- reduced the bus route data size by 78% to 2,105 KB.
- reduced the zoning data size by 68% to 4,132 KB.

0.3.5 (2025-02-24 post-playtesting adjustments pt.2)
- added a neighborhood tile value placeholder.
- added a scroll funciton to the tile info.
- tile composition ui overhaul.
- enlarged the minimaps by 20%.
- moved the map scale and zoom to the bottom left, along with the viewport minimap.
- adjusted some acronyms and descriptions to be more user-friendly.
- the background colors for the material radar charts can be toggled off along with the chart colors.
- merged the story and option buttons into the side panel.
- the side panel is now open on default.
- removed darkmode functions.

0.3.4 (2025-02-24 post-playtesting adjustments)
- added a viewport minimap via leafalet-minimap.
- added a visual cue for the hex geojson shape on mouseover.
- added search function via leaflet control geocoder.
- added background colors for the material radar charts for better visual identification.
- increased the top-left buttons' sizes by 25% and increased their shadow opacity.
- the map x-ray and tile composition panels are now collapsed on load.
- removed the api streetview function due to its confusing nature.

0.3.3 (2025-02-13 x-ray & chart update)
- added subway & bus x-ray layer.
- added two minimaps, esri and satellite, to the tile info panel.
- added material info for brooklyn, queens, bronx, and staten island.
- made the sidebar 40px thinner.
- adjusted the x-ray panel layout and button interaction.
- adjusted the sidebar content to only contain data, media, and references.
- adjusted the material composition display so that it resembles more the actual map tile visualization.